cfn_benchmark/cfn_templates/jupytercalpoly__k8s-eks-deploy/spot-node-group.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: 'EKS nodes (Amazon Linux 2 with SSH)  [created and managed by eksctl]'
Parameters:
  ClusterName:
    Type: String
  ClusterStackName:
    Type: String
  NodeGroupID:
    Type: Number
Resources:
  EgressInterCluster:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      Description: !Sub >-
        Allow worker nodes in group ${ClusterName}-${NodeGroupID} to communicate
        with control plane (kubelet and workload TCP ports)
      DestinationSecurityGroupId: !Ref SG
      FromPort: 1025
      GroupId: !ImportValue
        'Fn::Sub': '${ClusterStackName}::SecurityGroup'
      IpProtocol: tcp
      ToPort: 65535
  IngressInterCluster:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: !Sub >-
        Allow worker nodes in group ${ClusterName}-${NodeGroupID} to communicate
        with control plane (kubelet and workload TCP ports)
      FromPort: 1025
      GroupId: !Ref SG
      IpProtocol: tcp
      SourceSecurityGroupId: !ImportValue
        'Fn::Sub': '${ClusterStackName}::SecurityGroup'
      ToPort: 65535
  IngressInterClusterCP:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: !Sub >-
        Allow control plane to recieve API requests from worker nodes in group
        ${ClusterName}-${NodeGroupID}
      FromPort: 443
      GroupId: !ImportValue
        'Fn::Sub': '${ClusterStackName}::SecurityGroup'
      IpProtocol: tcp
      SourceSecurityGroupId: !Ref SG
      ToPort: 443
  IngressInterSG:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: !Sub >-
        Allow worker nodes in group ${ClusterName}-${NodeGroupID} to communicate
        with each other (all ports)
      GroupId: !Ref SG
      IpProtocol: '-1'
      SourceSecurityGroupId: !Ref SG
      ToPort: 65535
  NodeGroup:
    Type: 'AWS::AutoScaling::AutoScalingGroup'
    Properties:
      DesiredCapacity: '2'
      LaunchConfigurationName: !Ref NodeLaunchConfig
      MaxSize: '4'
      MinSize: '2'
      Tags:
        - Key: Name
          PropagateAtLaunch: 'true'
          Value: !Sub '${ClusterName}-${NodeGroupID}-Node'
        - Key: !Sub 'kubernetes.io/cluster/${ClusterName}'
          PropagateAtLaunch: 'true'
          Value: owned
      VPCZoneIdentifier: !Split
        - ','
        - !ImportValue
          'Fn::Sub': '${ClusterStackName}::Subnets'
    UpdatePolicy:
      AutoScalingRollingUpdate:
        MaxBatchSize: '1'
        MinInstancesInService: '1'
  NodeInstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Path: /
      Roles:
        - !Ref NodeInstanceRole
  NodeInstanceRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action:
              - 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
        Version: 2012-10-17
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy'
        - 'arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy'
        - 'arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryPowerUser'
      Path: /
  NodeLaunchConfig:
    Type: 'AWS::AutoScaling::LaunchConfiguration'
    Properties:
      AssociatePublicIpAddress: true
      IamInstanceProfile: !Ref NodeInstanceProfile
      ImageId: ami-08cab282f9979fc7a
      InstanceType: m5.large
      SecurityGroups:
        - !Ref SG
      UserData: >-
        H4sIAAAAAAAA/6RY727bOBL/7qeYUwOkwYVSnE3aXQPaQ65Ji6DZpGja3QPWRUKLY5s1RaokZSebBLh3uBe4Z7lHuSc5DCXZsuP86e2XxBJnhsOZ+f1mqBeZMqVgmdFDOeoUPJvwEbpeh8HXbx1b6iwX9MCgkEUHgIHUznOlwm/GymJkucDwxGcuUzIIJ1NuEyUHSbCeuMzKwrukQMuCvs4wGaG/yNFzwT2P3fi79DKLArWXXLlG1V07j3nmK88Ex9xoZlEZLtasW3SeWx9+T8oBKvSdmZUeL4ZSVefPjPaofQ9uWQcA4JeDf1x8ODs8T3d/Cs9vTj6ffzr6eHF4ep52d+Luzk5MfzsAZqbR9sAa43v0pwNQcD/uQYI+S3DiMq+SetcY9ZTW0ebSOWm060G082pvL1rjwou/JAOpEzcGhmWnegXnMi8UwszyokALQ2OBl35M4cm4N3YbnIEZQsY1WOQCDn47vzh6f37RHOD0 [...]
  PolicyStackSignal:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - 'cloudformation:SignalResource'
            Effect: Allow
            Resource: !Join
              - ':'
              - - 'arn:aws:cloudformation'
                - !Ref 'AWS::Region'
                - !Ref 'AWS::AccountId'
                - !Join
                  - /
                  - - stack
                    - !Ref 'AWS::StackName'
                    - '*'
        Version: 2012-10-17
      PolicyName: !Sub '${AWS::StackName}-PolicyStackSignal'
      Roles:
        - !Ref NodeInstanceRole
  PolicyTagDiscovery:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - 'ec2:DescribeTags'
            Effect: Allow
            Resource: '*'
        Version: 2012-10-17
      PolicyName: !Sub '${AWS::StackName}-PolicyTagDiscovery'
      Roles:
        - !Ref NodeInstanceRole
  SG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: !Sub >-
        Communication between the control plane and worker nodes in group
        ${ClusterName}-${NodeGroupID}
      Tags:
        - Key: !Sub 'kubernetes.io/cluster/${ClusterName}'
          Value: owned
        - Key: Name
          Value: !Sub '${AWS::StackName}/SG'
      VpcId: !ImportValue
        'Fn::Sub': '${ClusterStackName}::VPC'
Outputs:
  NodeInstanceRoleARN:
    Export:
      Name: !Sub '${AWS::StackName}::NodeInstanceRoleARN'
    Value: !GetAtt NodeInstanceRole.Arn
